@@ -7,6 +7,11 @@
 ChangeLog (2003.nn.nn):
 =======================
 
+- Applied patches:
+   - iometer-2003.12.16-SwitchesNowRequired.patch by Daniel Scheibli
+     (code cleanup of the dynamo parameter handling; switches are no
+     longer option but required now)
+
 
 
 ChangeLog (2003.12.16):
